--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde_repr = "0.1.6"
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
 
 tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
+tokio-stream = { version = "0.1.5", features = ["sync"] }
 warp = "0.3"
 futures = "0.3"
 async-stream = "0.3.0"
