--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = "1.0.64"
 serde_repr = "0.1.6"
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
 thiserror = "1.0"
+anyhow = "1.0"
 
 tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
 tokio-stream = { version = "0.1.5", features = ["sync"] }
@@ -22,7 +23,7 @@ futures = "0.3"
 async-stream = "0.3.0"
 async-trait = "0.1.48"
 
-warp = "0.3"
+warp = { version = "0.3", features = ["tls"] }
 async-graphql = "2.8.4"
 async-graphql-warp = "2.8.4"
 
