--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,11 @@ serde = { version = "1.0.124", features = ["derive"] }
 serde_json = "1.0.64"
 serde_repr = "0.1.6"
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
+
 thiserror = "1.0"
 anyhow = "1.0"
+event-listener-primitives = "0.2.2"
+clap = "3.0.0-beta.2"
 
 tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
 tokio-stream = { version = "0.1.5", features = ["sync"] }
