--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ anyhow = "1.0"
 event-listener-primitives = "0.2.2"
 clap = "3.0.0-beta.2"
 
-tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread", "sync"] }
 tokio-stream = { version = "0.1.5", features = ["sync"] }
 tokio-local = { path = "tokio-local" }
 futures = "0.3"
