--- a/tokio-local/Cargo.toml
+++ b/tokio-local/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.0.2", features=["rt", "sync"] }
+tokio = { version = "1.0.2", features=["rt-multi-thread", "sync", "macros"] }
+tokio-util = "0.6.6"
+futures = "0.3"
