--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["netdex"]
 edition = "2018"
 
+# there's a bug that prevents compiling w/ gcc11 with an upstream fix
+[patch.crates-io]
+mediasoup = { git = "https://github.com/versatica/mediasoup", branch = "v3" }
+
 [dependencies]
 mediasoup = "0.7.1"
 
@@ -11,7 +15,6 @@ log = "0.4.14"
 env_logger = "0.8.3"
 serde = { version = "1.0.124", features = ["derive"] }
 serde_json = "1.0.64"
-serde_repr = "0.1.6"
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
 
 thiserror = "1.0"
@@ -23,7 +26,6 @@ tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread", "sync"] }
 tokio-stream = { version = "0.1.5", features = ["sync"] }
 tokio-local = { path = "tokio-local" }
 futures = "0.3"
-async-stream = "0.3.0"
 async-trait = "0.1.48"
 
 warp = { version = "0.3", features = ["tls"] }
