--- a/tokio-local/Cargo.toml
+++ b/tokio-local/Cargo.toml
@@ -10,5 +10,7 @@ edition = "2018"
 
 [dependencies]
 tokio = { version = "1.0.2", features=["rt-multi-thread", "sync", "macros"] }
+
+[dev-dependencies]
 tokio-util = "0.6.6"
 futures = "0.3"
