--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,6 @@ derive_more = "0.99.0"
 
 tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread", "sync"] }
 tokio-stream = { version = "0.1.5", features = ["sync"] }
-tokio-local = { path = "tokio-local" }
 futures = "0.3"
 async-trait = "0.1.48"
 
@@ -34,14 +33,17 @@ warp = { version = "0.3", features = ["tls"] }
 async-graphql = "2.8.4"
 async-graphql-warp = "2.8.4"
 
+tokio-local = { path = "third-party/tokio-local" }
+
 [build-dependencies]
 built = "0.5"
 
 [dev-dependencies]
 graphql_client = "0.9"
-tungstenite = { version = "0.13", features = ["native-tls"] }
+graphql-ws = { path = "third-party/graphql-ws" }
+tokio-tungstenite = { version = "0.14", features = ["native-tls"] }
 native-tls = "0.2"
 http = "0.2"
 
 [workspace]
-members = ["tokio-local"]
+members = ["third-party/tokio-local", "third-party/graphql-ws"]
