--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ anyhow = "1.0"
 clap = "3.0.0-beta.2"
 bimap = "0.6.1"
 derive_more = "0.99.0"
+lazy_static = "1.4.0"
 
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
 tokio-stream = { version = "0.1", features = ["sync"] }
@@ -30,8 +31,9 @@ futures = "0.3"
 async-trait = "0.1"
 
 warp = { version = "0.3", features = ["tls"] }
-async-graphql = "2.9"
-async-graphql-warp = "2.9"
+# async-graphql 2.9 added bytes support, which messes up UUID scalar types
+async-graphql = "~2.8"
+async-graphql-warp = "~2.8"
 
 tokio-local = { path = "third-party/tokio-local" }
 
@@ -40,7 +42,7 @@ built = "0.5"
 
 [dev-dependencies]
 graphql_client = "0.10"
-graphql-ws = { git = "https://github.com/Netdex/graphql-ws" }
+graphql-ws = { version = "0.3", git = "https://github.com/Netdex/graphql-ws" }
 tokio-tungstenite = { version = "0.15", features = ["native-tls"] }
 native-tls = "0.2"
 http = "0.2"
